fix(search): fix list layout anomalies caused by unaligned search engine height
Refs: cad23560a5c50b4ff59fb2821d88e06dd629f283

--- a/web/assets/css/search.css
+++ b/web/assets/css/search.css
@@ -213,6 +213,7 @@
   float: left;
   width: 16.66%;
   padding: 1px;
+  height: 25px;
   box-sizing: border-box;
 }
 
